--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -15,52 +15,31 @@ layout: default
 
       <p class="profile-links">
         {% if site.twitter_username %}
-        <a
-          class="social-link"
-          href="http://twitter.com/{{ site.twitter_username }}"
-        >
+        <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
           <i class="fab fa-twitter"></i>
         </a>
         {% endif %} {% if site.facebook_username %}
-        <a
-          class="social-link"
-          href="http://facebook.com/{{ site.facebook_username }}"
-        >
+        <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
           <i class="fab fa-facebook-f"></i>
         </a>
         {% endif %} {% if site.instagram_username %}
-        <a
-          class="social-link"
-          href="http://instagram.com/{{ site.instagram_username }}"
-        >
+        <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
           <i class="fab fa-instagram"></i>
         </a>
         {% endif %} {% if site.medium_username %}
-        <a
-          class="social-link"
-          href="http://medium.com/@{{ site.medium_username }}"
-        >
+        <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
           <i class="fab fa-medium-m"></i>
         </a>
         {% endif %} {% if site.github_username %}
-        <a
-          class="social-link"
-          href="http://github.com/{{ site.github_username }}"
-        >
+        <a class="social-link" href="http://github.com/{{ site.github_username }}">
           <i class="fab fa-github"></i>
         </a>
         {% endif %} {% if site.behance_username %}
-        <a
-          class="social-link"
-          href="http://behance.net/{{ site.behance_username }}"
-        >
+        <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
           <i class="fab fa-behance"></i>
         </a>
         {% endif %} {% if site.linkedin_username %}
-        <a
-          class="social-link"
-          href="http://linkedin.com/in/{{ site.linkedin_username }}"
-        >
+        <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
           <i class="fab fa-linkedin-in"></i>
         </a>
         {% endif %} {% if site.telegram_username %}
@@ -68,17 +47,11 @@ layout: default
           <i class="fab fa-telegram-plane"></i>
         </a>
         {% endif %} {% if site.dribbble_username %}
-        <a
-          class="social-link"
-          href="https://dribbble.com/{{ site.dribbble_username }}"
-        >
+        <a class="social-link" href="https://dribbble.com/{{ site.dribbble_username }}">
           <i class="fab fa-dribbble"></i>
         </a>
         {% endif %} {% if site.flickr_username %}
-        <a
-          class="social-link"
-          href="https://www.flickr.com/photos/{{ site.flickr_username }}"
-        >
+        <a class="social-link" href="https://www.flickr.com/photos/{{ site.flickr_username }}">
           <i class="fab fa-flickr"></i>
         </a>
         {% endif %}
@@ -93,24 +66,44 @@ layout: default
       {% endif %}
     </div>
 
+    <!--
     <div class="card">
       <h1>Skills</h1>
 
       {%- include author_skills.html -%}
     </div>
+    -->
 
+    <!--
     {% if site.wakatime_username %}
     <div class="card">
       <h1>Coding Activity</h1>
 
       {%- include coding_activity.html -%}
     </div>
-    {% endif %}
+    {% endif %}   
+  -->
+
   </div>
   <div class="col-lg-7">
+
+    <div class="card">
+      <h1 class="card-title">Über mich</h1>
+      Mein Name ist Andreas Heil, ich bin Professor für Software Engineering an der Hochschule in Heilbronn. Diese Webseite, der Blog als auch der Inhalt sind meine eigenen Meinungnen und r
+
+      Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim Aufbau neuer erfolgreicher Produkt-Teams als auch
+      der Transformation existierender exzellenter Produkt-Teams in noch bessere Produkt-Teams unterstützen.
+      <br /><br />
+      Über zwei Jahrzehnte Erfahrung als Software-Entwickler, Architekt, Entwicklungsleiter und Produktmanager
+      ermöglichend hierbei einen ganzheitlichen Blick auf die Entwicklung und den Betrieb moderner
+      Software-Architekturen.
+    </div>
+
+
+    <!--
     {% if site.author_bio %}
     <div class="card">
-      <h1 class="card-title">About</h1>
+      <h1 class="card-title">Über mich</h1>
       <p>{{ site.author_bio }}</p>
     </div>
     {% endif %} {% if site.show_author_project_details == true %}
@@ -121,19 +114,14 @@ layout: default
       == true %}
       <div class="row" id="project-card">
         <div class="col-md-6">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
-            class="project-img"
-          />
+          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img" />
         </div>
         <div class="col-md-4 center">
           <h4 class="experience-title">{{ project.project_title }}</h4>
           <h6 class="experience-info">{{ project.project_info}}</h6>
           <p class="experience-desc">{{ project.project_description }}</p>
           <p>
-            <a class="project-link" href="{{project.project_url}}"
-              >{{ project.project_url}}</a
-            >
+            <a class="project-link" href="{{project.project_url}}">{{ project.project_url}}</a>
           </p>
         </div>
       </div>
@@ -148,10 +136,7 @@ layout: default
       %}
       <div class="row">
         <div class="col-md-2">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}"
-            class="company-logo"
-          />
+          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="company-logo" />
         </div>
         <div class="col-md-6">
           <h4 class="experience-title">{{ exp.designation }}</h4>
@@ -170,10 +155,7 @@ layout: default
       == true %}
       <div class="row">
         <div class="col-md-2">
-          <img
-            src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}"
-            class="company-logo"
-          />
+          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="company-logo" />
         </div>
         <div class="col-md-6">
           <h4 class="experience-title">{{detail.college_degree }}</h4>
@@ -186,4 +168,5 @@ layout: default
     </div>
     {% endif %}
   </div>
-</div>
+-->
+  </div>
