--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,9 @@ layout: compress
   <div class="col-lg-12">
     {{ content }}
   </div>
-  <div class="col-lg-12" id="newsletter_footer">
-    {%- include blog_newsletter.html -%}
-  </div>
+
   {%- include footer.html -%}
-  <!--<script>
+  <script>
     var options = {
       classname: 'my-class',
       id: 'my-id'
@@ -24,7 +22,7 @@ layout: compress
     nanobar.go(30);
     nanobar.go(76);
     nanobar.go(100);
-  </script>-->
+  </script>
 
   <script src="{{site.url}}{{site.baseurl}}/assets/js/mode-switcher.js"></script>
 
