--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,6 @@
     <p> Powered by<a href="https://github.com/sujaykundu777/devlopr-jekyll"> devlopr jekyll</a>. Hosted at <a
             href="https://pages.github.com">Github</a>. Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>. Informationen zum Datenschutz im <a
-            href="{{ site.url}}legal">Impressum</a>
+            href="/legal">Impressum</a>
     </p>
 </footer>
