--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,11 @@ layout: compress
   <div class="col-lg-12">
     {{ content }}
   </div>
-
+  <div class="col-lg-12" id="newsletter_footer">
+    {%- include blog_newsletter.html -%}
+  </div>
   {%- include footer.html -%}
+
   <script>
     var options = {
       classname: 'my-class',
