--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,8 +70,11 @@
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css" />
   <link rel="stylesheet"
     href="{{site.url}}{{site.baseurl}}/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet"
+  <!--  <link rel="stylesheet"
     href="{{site.url}}{{site.baseurl}}/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
+  -->
+  <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/bower_components/font-awesome/css/all.min.css" />
+
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/bower_components/icono/dist/icono.min.css" />
   <!-- Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
