--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,22 +5,22 @@ layout: default
 <div class="row" id="blog-post-container">
   <div class="col-lg-8 offset-md-2">
     {%- include blog_post_article.html -%}
-     {%- include blog_post_comments.html-%}
+    {%- include blog_post_comments.html-%}
   </div>
 </div>
 <div class="row">
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header">About {{site.author}}</div>
+      <div class="card-header">Über {{site.author}}</div>
       <div class="card-body">
         <p class="author_bio">{{ site.author_bio }}</p>
-        {%- include github_star_button.html -%}
+        <!-- {%- include github_star_button.html -%} -->
       </div>
     </div>
   </div>
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header">Categories</div>
+      <div class="card-header">Kategorien</div>
       <div class="card-body text-dark">
         {%- include blog_categories.html -%}
       </div>
@@ -28,7 +28,7 @@ layout: default
   </div>
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header">Useful Links</div>
+      <div class="card-header">Links</div>
       <div class="card-body text-dark">
         {% for i in site.urls %}
         <li>
@@ -39,4 +39,3 @@ layout: default
     </div>
   </div>
 </div>
-
