--- a/_includes/blog_post_comments.html
+++ b/_includes/blog_post_comments.html
@@ -1,5 +1,7 @@
 <div id="remark42"></div>
 
+Test
+
 <script>
     var remark_config = {
         host: "REMARK_URL", // hostname of remark server, same as REMARK_URL in backend config, e.g. "https://demo.remark42.com"
