--- a/_includes/blog_post_comments.html
+++ b/_includes/blog_post_comments.html
@@ -4,7 +4,7 @@ Test
 
 <script>
     var remark_config = {
-        host: "REMARK_URL", // hostname of remark server, same as REMARK_URL in backend config, e.g. "https://demo.remark42.com"
+        host: "https://comments.aheil.de",
         site_id: 'YOUR_SITE_ID',
         components: ['embed'], // optional param; which components to load. default to ["embed"]
         // to load all components define components as ['embed', 'last-comments', 'counter']
@@ -34,7 +34,7 @@ Test
         max_shown_comments: 10, // optional param; if it isn't defined default value (15) will be used
         theme: 'dark', // optional param; if it isn't defined default value ('light') will be used
         page_title: 'Moving to Remark42', // optional param; if it isn't defined `document.title` will be used
-        locale: 'en', // set up locale and language, if it isn't defined default value ('en') will be used
+        locale: 'de', // set up locale and language, if it isn't defined default value ('en') will be used
         show_email_subscription: false // optional param; by default it is `true` and you can see email subscription feature
         // in interface when enable it from backend side
         // if you set this param in `false` you will get notifications email notifications as admin
