--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -93,85 +93,80 @@ layout: default
 
     <div class="card">
       <h1 class="card-title">Über mich</h1>
-      Mein Name ist Andreas Heil, ich bin Professor für Software Engineering an der Hochschule in Heilbronn. Diese
-      Webseite, der Blog als auch der Inhalt sind meine eigenen Meinungnen und r
 
-      Über die Jahre konnte ich unter Nutzung aktuellster Ansätze beim Aufbau neuer erfolgreicher Produkt-Teams als auch
-      der Transformation existierender exzellenter Produkt-Teams in noch bessere Produkt-Teams unterstützen.
-      <br /><br />
-      Über zwei Jahrzehnte Erfahrung als Software-Entwickler, Architekt, Entwicklungsleiter und Produktmanager
-      ermöglichend hierbei einen ganzheitlichen Blick auf die Entwicklung und den Betrieb moderner
-      Software-Architekturen.
-    </div>
+      <!--
+      {% if site.author_bio %}
+      <div class="card">
+        <h1 class="card-title">Über mich</h1>
+        <p>{{ site.author_bio }}</p>
+      </div>
+      {% endif %} 
+      -->
 
+      <div class="card">
+        {{ content }}
+      </div>
 
-    <!--
-    {% if site.author_bio %}
-    <div class="card">
-      <h1 class="card-title">Über mich</h1>
-      <p>{{ site.author_bio }}</p>
-    </div>
-    {% endif %} {% if site.show_author_project_details == true %}
-    <div id="author_projects" class="card">
-      <h1 class="card-title">Projects</h1>
-      <br />
-      {% for project in site.author_project_details %} {% if project.visibility
-      == true %}
-      <div class="row" id="project-card">
-        <div class="col-md-6">
-          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img" />
+      {% if site.show_author_project_details == true %}
+      <div id="author_projects" class="card">
+        <h1 class="card-title">Projects</h1>
+        <br />
+        {% for project in site.author_project_details %} {% if project.visibility
+        == true %}
+        <div class="row" id="project-card">
+          <div class="col-md-6">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img" />
+          </div>
+          <div class="col-md-4 center">
+            <h4 class="experience-title">{{ project.project_title }}</h4>
+            <h6 class="experience-info">{{ project.project_info}}</h6>
+            <p class="experience-desc">{{ project.project_description }}</p>
+            <p>
+              <a class="project-link" href="{{project.project_url}}">{{ project.project_url}}</a>
+            </p>
+          </div>
         </div>
-        <div class="col-md-4 center">
-          <h4 class="experience-title">{{ project.project_title }}</h4>
-          <h6 class="experience-info">{{ project.project_info}}</h6>
-          <p class="experience-desc">{{ project.project_description }}</p>
-          <p>
-            <a class="project-link" href="{{project.project_url}}">{{ project.project_url}}</a>
-          </p>
-        </div>
+        <br />
+        {% endif %} {% endfor %}
       </div>
-      <br />
-      {% endif %} {% endfor %}
-    </div>
-    {% endif %} {% if site.show_author_work_experiences == true %}
-    <div class="card">
-      <h1 class="card-title">Work Experience</h1>
-      <br />
-      {% for exp in site.author_work_experiences %} {% if exp.visibility == true
-      %}
-      <div class="row">
-        <div class="col-md-2">
-          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="company-logo" />
+      {% endif %} {% if site.show_author_work_experiences == true %}
+      <div class="card">
+        <h1 class="card-title">Work Experience</h1>
+        <br />
+        {% for exp in site.author_work_experiences %} {% if exp.visibility == true
+        %}
+        <div class="row">
+          <div class="col-md-2">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="company-logo" />
+          </div>
+          <div class="col-md-6">
+            <h4 class="experience-title">{{ exp.designation }}</h4>
+            <h6 class="experience-info">{{ exp.company_name}}</h6>
+            <p class="experience-desc">{{ exp.description }}</p>
+            <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p>
+          </div>
         </div>
-        <div class="col-md-6">
-          <h4 class="experience-title">{{ exp.designation }}</h4>
-          <h6 class="experience-info">{{ exp.company_name}}</h6>
-          <p class="experience-desc">{{ exp.description }}</p>
-          <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p>
-        </div>
+        {% endif %} {% endfor %}
       </div>
-      {% endif %} {% endfor %}
-    </div>
-    {% endif %} {% if site.show_author_education_details == true %}
-    <div class="card">
-      <h1 class="card-title">Education</h1>
-      <br />
-      {% for detail in site.author_education_details %} {% if detail.visibility
-      == true %}
-      <div class="row">
-        <div class="col-md-2">
-          <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="company-logo" />
+      {% endif %} {% if site.show_author_education_details == true %}
+      <div class="card">
+        <h1 class="card-title">Education</h1>
+        <br />
+        {% for detail in site.author_education_details %} {% if detail.visibility
+        == true %}
+        <div class="row">
+          <div class="col-md-2">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="company-logo" />
+          </div>
+          <div class="col-md-6">
+            <h4 class="experience-title">{{detail.college_degree }}</h4>
+            <h6 class="experience-info">{{detail.college_name}}</h6>
+            <p class="experience-desc">{{detail.description}}</p>
+            <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
+          </div>
         </div>
-        <div class="col-md-6">
-          <h4 class="experience-title">{{detail.college_degree }}</h4>
-          <h6 class="experience-info">{{detail.college_name}}</h6>
-          <p class="experience-desc">{{detail.description}}</p>
-          <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
-        </div>
+        {% endif %} {% endfor %}
       </div>
-      {% endif %} {% endfor %}
+      {% endif %}
     </div>
-    {% endif %}
-  </div>
--->
   </div>
