fixed missing title

--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -16,6 +16,6 @@
 </div>
 -->
 <div id="mc_embed_signup_scroll_footer">
-    <iframe src="https://aheil.substack.com/embed" width="640" height="320"
+    <iframe title="Newsletter Anmeldung" src="https://aheil.substack.com/embed" width="640" height="320"
         style="border:1px solid #EEE; background:white; margin-bottom: 5px;" frameborder="0" scrolling="no"></iframe>
 </div>
