--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
   });
 </script>
 <div class="jumbotron" style="text-align: center;">
-  <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
+  <img alt="Autor" class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
   <p class="jumbotron-heading-white">Hi, ich bin {{site.author}} !</p>
   <p class="lead-white" id="typewriteText"></p>
 </div>
