--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -495,7 +495,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url('../img/bg.jpg');
+    background-image: url('../img/bg.webp');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
