--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     {% if {page.title %}{{ page.title }} -{{site.title}}{% else %}{{ site.title }} - {{
     site.subtitle }}{% endif %}
   </title>
+
   <meta http-equip="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   {% if page.summary %}
@@ -62,6 +63,8 @@
   {% endif %} {% if page.header-img %}
   <meta name="twitter:image:src" content="{{ site.url }}{{ page.thumbnail }}" />
   {% endif %}
+
+  <link rel="preconnect" href="https://cdn.substack.com">
 
   <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/main.css" />
   <!-- <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/custom-style.css" /> -->
